# SegmatchProject

./: CMakeLists.txt  README.md
data/: confidence.csv  rtree_demo.cc
include/grabber/: HDL32Grab.h  ICPOper.h  MapConstruct.h  VLP16Graber.h  hdl_grabber_.h  vlp_grabber_.h
include/segmatch/: SegMatch.h  SegMatchParam.hpp  SegmentDefine.h
include/segmatch/segmenters/: euclidean_segmenter.hpp  region_growing_segmenter.hpp  segmenter.hpp  segmenters.hpp
include/trajectory/: SGBOpr.h  TrjFile.h  TrjLogReader.h
param/: segmatch.yaml
src/grabber/: MapConstruct.cpp  hdl_grabber_.cpp  vlp_grabber_.cpp
src/segmatch/: SegMatch.cpp
src/segmatch/segmenters/: euclidean_segmenter.cpp  region_growing_segmenter.cpp
src/trajectory/: SGBOpr.cpp  TrjFile.cpp  TrjLogReader.cpp
test/: test.cpp  test_find_match.cpp  test_train_forest.cpp
